--- a/New.html
+++ b/New.html
@@ -12,13 +12,12 @@
         background-color: black;
     }
     .body{
-        color:black;
-        height: 200px;
+        color:red;
+        height: 50px;
         width: 100%;
-        background-color: white;
-        margin: 10px;
+        background-color: Yellow;
         display: inline-block;
-        font-size: 50px;
+        font-size: 10px;
         text-align: center;
     }
     .image{
@@ -43,20 +42,20 @@
         }
         #box-1{
             position: sticky;
-            top: 10px;
+            top: 0px;
         }
         #box-4{
             position: fixed;
-            top: opx;
+            top: 0px;
         }
         image{
-            height: 900px;
-            width: 100px;
+            height: 100%;
+            width: 1000px;
         }
     </style>
 </head>
 <body class="background">
-    <img src="https://th.bing.com/th/id/OIP.O8uYhQKf-4H1j7SkbG2FTwHaEK?pid=ImgDet&rs=1" alt="" width="100%" height="100%">
+   <center><img src="https://th.bing.com/th/id/OIP.O8uYhQKf-4H1j7SkbG2FTwHaEK?pid=ImgDet&rs=1" alt="" width="1000px"></center> 
     <div class="body" id="box-1"><h1>1</h1></div>
    <!--<div class="body" id="box-2"><h1>2</h1></div>
     <div class="body" id="box-3"><h1>3</h1></div>
